src/test/deca/syntax/invalid/decaObjet/emptyClass/02missedBracket.deca
// Description:
//    tests de programme incorrect lexicalement (token 'clas' non reconnu)
//
// Resultats:
//    02missedBracket.deca:11:0:
//
// Historique:
//    cree le 13/06/2022

class A
}
{

}